# duckdb-binpb

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: build.yml
benches/: micro.rs  normalize.rs  pipeline.rs
examples/: benchmark_fingerprint.rs  memory_benchmark.rs
proto/opentelemetry/proto/collector/metrics/v1/: metrics_service.proto
proto/opentelemetry/proto/common/v1/: common.proto
proto/opentelemetry/proto/metrics/v1/: metrics.proto
proto/opentelemetry/proto/resource/v1/: resource.proto
src/: common.rs  fingerprint.rs  lib.rs  logs.rs  metrics.rs  normalize.rs  opentelemetry.proto.collector.logs.v1.rs  opentelemetry.proto.collector.metrics.v1.rs  opentelemetry.proto.collector.trace.v1.rs  opentelemetry.proto.common.v1.rs  opentelemetry.proto.logs.v1.rs  opentelemetry.proto.metrics.v1.rs  opentelemetry.proto.resource.v1.rs  opentelemetry.proto.trace.v1.rs  sketch.rs  tid.rs  traces.rs
src/log_fingerprint/: cluster.rs  cluster_tests.rs  compatibility_tests.rs  english_words.txt  json.rs  mod.rs  tokenizer.rs  wordlist.rs
test/: integration_test.sql  run_integration_tests.sh
test/data/: test_metrics.binpb
tests/: integration_test.rs
