[package]
name = "otel_metrics"
version = "0.1.2"
edition = "2021"
description = "DuckDB extension for reading OpenTelemetry binpb metric files"
license = "AGPL-3.0"
repository = "https://github.com/cardinalhq/duckdb-binpb"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "=1.4.3", features = ["vtab-loadable", "vscalar"] }
libduckdb-sys = { version = "=1.4.3", features = ["loadable-extension"] }
prost = "0.13"
flate2 = "1.0"
hex = "0.4"
fnv = "1.0"
glob = "0.3"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "normalize"
harness = false

