[package]
name = "otel_binpb"
version = "0.2.1"
edition = "2021"
description = "DuckDB extension for reading OpenTelemetry binpb files (metrics, logs, traces)"
license = "AGPL-3.0"
repository = "https://github.com/cardinalhq/duckdb-binpb"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "=1.4.3", features = ["vtab-loadable", "vscalar"] }
libduckdb-sys = { version = "=1.4.3", features = ["loadable-extension"] }
prost = "0.13"
flate2 = "1.0"
hex = "0.4"
fnv = "1.0"
glob = "0.3"
serde_json = "1.0"
logos = "0.14"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
regex = "1.10"
once_cell = "1.19"
phf = { version = "0.11", features = ["macros"] }
data-encoding = "2.10.0"
ulid = "1.2.1"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "normalize"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "micro"
harness = false
